[metadata]
name = coxbuild
version = 0.0.1
author = StardustDL
author_email = stardustdl@163.com
description = A tiny cross platform, cross language build system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/coxbuild
project_urls =
    Bug Tracker = https://github.com/StardustDL/coxbuild/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    coxbuild = coxbuild.__main__:main