[metadata]
name = coxbuild
version = attr: coxbuild.__version__
author = StardustDL
author_email = stardustdl@163.com
description = A tiny cross platform, cross language build system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/coxbuild
project_urls =
    Source Code = https://github.com/StardustDL/coxbuild
    Changes = https://github.com/StardustDL/coxbuild/releases
    Documentation = https://github.com/StardustDL/coxbuild
    Bug Tracker = https://github.com/StardustDL/coxbuild/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    click>=8.0.3

[options.entry_points]
console_scripts =
    schemdule = coxbuild.__main__:main